--- a/CocoaOpenGL/en.lproj/MainMenu.xib
+++ b/CocoaOpenGL/en.lproj/MainMenu.xib
@@ -175,7 +175,7 @@
 							<string key="NSTitle">View</string>
 							<object class="NSMutableArray" key="NSMenuItems">
 								<bool key="EncodedWithXMLCoder">YES</bool>
-								<object class="NSMenuItem" id="958389752">
+								<object class="NSMenuItem" id="141134002">
 									<reference key="NSMenu" ref="466310130"/>
 									<string key="NSTitle">Enter Full Screen</string>
 									<string key="NSKeyEquiv">f</string>
@@ -251,7 +251,7 @@
 				<string key="NSWindowRect">{{335, 390}, {480, 360}}</string>
 				<int key="NSWTFlags">1685585920</int>
 				<string key="NSWindowTitle">CocoaOpenGL</string>
-				<string key="NSWindowClass">NSWindow</string>
+				<string key="NSWindowClass">MyNSWindow</string>
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
 				<string key="NSWindowContentMinSize">{480, 360}</string>
@@ -260,7 +260,7 @@
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSOpenGLView" id="792100367">
+						<object class="NSOpenGLView" id="220742604">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">1298</int>
 							<object class="NSPSMatrix" key="NSDrawMatrix"/>
@@ -380,7 +380,7 @@
 					<object class="IBActionConnection" key="connection">
 						<string key="label">toggleFullScreen:</string>
 						<reference key="source" ref="1014"/>
-						<reference key="destination" ref="958389752"/>
+						<reference key="destination" ref="141134002"/>
 					</object>
 					<int key="connectionID">538</int>
 				</object>
@@ -558,7 +558,7 @@
 						<reference key="object" ref="466310130"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="958389752"/>
+							<reference ref="141134002"/>
 						</object>
 						<reference key="parent" ref="586577488"/>
 					</object>
@@ -576,7 +576,7 @@
 						<reference key="object" ref="439893737"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="792100367"/>
+							<reference ref="220742604"/>
 						</object>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -592,12 +592,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">536</int>
-						<reference key="object" ref="792100367"/>
+						<reference key="object" ref="220742604"/>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">537</int>
-						<reference key="object" ref="958389752"/>
+						<reference key="object" ref="141134002"/>
 						<reference key="parent" ref="466310130"/>
 					</object>
 				</object>
@@ -719,6 +719,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MyNSOpenGLView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MyNSWindow</string>
+					<string key="superclassName">NSWindow</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MyNSWindow.h</string>
 					</object>
 				</object>
 			</object>
